--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <!-- <li id="lnkBeer"><a ng-href="#!/beer">Cask Ale</a></li> -->
+                                <li id="lnkBeer"><a ng-href="#!/beer">Cask Ale</a></li> 
                                 <li id="lnkCider"><a ng-href="#!/cider">Cider</a></li>
                                 <li id="lnkCraft"><a ng-href="#!/craft">Lager &amp; Craft Keg</a></li>
                             </ul>
