Update beer list. Change social icons to fontawesome. Increase sponsor scroll speed

--- a/app/index.html
+++ b/app/index.html
@@ -90,10 +90,11 @@
                         <li class="navSocial">
                             <p>
                                 <br>
-                                <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a> &nbsp;
-                                <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a> &nbsp;
-                                <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a> &nbsp;
-                                <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
+                                <a href="https://twitter.com/dbf_beer"><i class="fab fa-twitter"></i></a> &nbsp;
+                                <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i class="fab fa-facebook-f"></i></a> &nbsp;
+                                <a href="https://www.instagram.com/didsburybeerfestival/"><i class="fab fa-instagram"></i></a> &nbsp;
+                                <a href="http://www.flickr.com/photos/65526946@N08/"><i class="fab fa-flickr"></i></a> &nbsp;
+                                <a href="http://www.youtube.com/user/Didsburybeerfestival"><i class="fab fa-youtube"></i></a>
                             </p>
                         </li>
                     </ul>
@@ -124,6 +125,8 @@
     </div>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDUIkZxzGxRGNEgCWdjOylusJhFetr6qv4"></script>
+    <script src="https://kit.fontawesome.com/1f7558718b.js" crossorigin="anonymous"></script>
+ 
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
