--- a/app/index.html
+++ b/app/index.html
@@ -48,28 +48,28 @@
 
     <!-- Add your site or application content here -->
     <div class="header">
-        <div class="navbar navbar-default" role="navigation">
+       <div class="navbar navbar-default" role="navigation">
             <div class="container">
                 <div class="navbar-header">
 
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+                    <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>-->
 
                     <a class="navbar-brand" href="#!/">
                         <img class="image headerLogo" src="images/dbfheader2019.svg" alt="Didsbury Beer Festival 2019"><br>
                     </a>
                 </div>
 
-                <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                <!--<div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
                         <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader2019.svg" /></a>
                         <li id="lnkHome" class="active"><a href="#!/">Home</a></li>
                         <li id="lnkFind"><a ng-href="#!/find">Map</a></li>
-                        <!-- <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>-->
+                        
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -98,7 +98,7 @@
                             </p>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
