--- a/app/404.html
+++ b/app/404.html
@@ -15,9 +15,9 @@
         gtag('config', 'UA-35875054-1');
     </script>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#ffc627">
+    <meta name="theme-color" content="#099a67">
     <title>The 12th Annual Didsbury Beer Festival</title>
-    <meta name="description" content="Welcome to the 12th annual Didsbury Beer Festival, taking place on 31st - 2nd November 2019. 200+ Beers, Ciders & Perries, with great food & music." />
+    <meta name="description" content="Welcome to the 12th annual Didsbury Beer Festival, taking place on 31st - 2nd November 2020. 200+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
     <meta name="robots" content="index, follow">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -60,13 +60,13 @@
                 </button>
 
                     <a class="navbar-brand" href="#!/">
-                        <img class="image headerLogo" src="images/dbfheader2019.svg" alt="Didsbury Beer Festival 2019"><br>
+                        <img class="image headerLogo" src="images/dbfheader2020.svg" alt="Didsbury Beer Festival 2020"><br>
                     </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
-                        <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader2019.svg" /></a>
+                        <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader2020.svg" /></a>
                         <li id="lnkHome" class="active"><a href="#!/">Home</a></li>
                         <li id="lnkFind"><a ng-href="#!/find">Map</a></li>
                         <!-- <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>
@@ -122,7 +122,7 @@
 
             </div>
             <!-- /slider -->
-            <p><img class="footerimage" src="images/DBF 2019 LOGO.svg" alt="Didsbury Beer Festival 2019"> Didsbury Beer Festival 2019</p>
+            <p><img class="footerimage" src="images/DBF 2020 LOGO.svg" alt="Didsbury Beer Festival 2020"> Didsbury Beer Festival 2020</p>
         </div>
     </div>
 
