Update page title

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="theme-color" content="#099a67">
-    <title>The 12th Annual Didsbury Beer Festival</title>
+    <title>Didsbury Beer Festival 2020</title>
     <meta name="description" content="Welcome to the 12th annual Didsbury Beer Festival, taking place on 31st - 2nd November 2020. 200+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
     <meta name="robots" content="index, follow">
