remove duplicate titles and '12th Annual' description

--- a/app/404.html
+++ b/app/404.html
@@ -16,8 +16,8 @@
     </script>
     <meta charset="utf-8">
     <meta name="theme-color" content="#099a67">
-    <title>The 12th Annual Didsbury Beer Festival</title>
-    <meta name="description" content="Welcome to the 12th annual Didsbury Beer Festival, taking place on 31st - 2nd November 2020. 200+ Beers, Ciders & Perries, with great food & music." />
+    <title>Didsbury Beer Festival 2020</title>
+    <meta name="description" content="Welcome to the Didsbury Beer Festival At Home" />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
     <meta name="robots" content="index, follow">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,6 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
-    <title>The 12th Annual Didsbury Beer Festival</title>
     <!-- Didsbury, Beer, Festival -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
